--- a/styles/css/wedding.css
+++ b/styles/css/wedding.css
@@ -26,15 +26,18 @@ h2 {
       font-size: 22px; } }
 
 h3 {
-  font-size: 26px;
-  font-weight: 600;
-  margin: 22px;
-  letter-spacing: 4px;
-  font-family: sverigedecorated; }
+  font-size: 100px;
+  margin: -15px;
+  text-align: center;
+  font-family: mademoisellecamille; }
 
 h4 {
-  font-size: 20px;
-  margin: 4px; }
+  font-size: 16px;
+  margin: 4px;
+  font-weight: 600;
+  color: #7282a7;
+  text-transform: uppercase;
+  font-style: normal; }
 
 a {
   text-decoration: none; }
@@ -113,6 +116,15 @@ body {
   min-height: 600px; }
   #picture-gallery img {
     height: 100%; }
+    @media screen and (max-width: 1366px) {
+      #picture-gallery img {
+        max-height: 420px; } }
+  @media screen and (max-width: 1366px) {
+    #picture-gallery {
+      width: 90%;
+      height: auto;
+      top: 20%;
+      min-height: 0; } }
 
 .nav-arrow {
   position: absolute;
@@ -129,6 +141,16 @@ body {
 
 #right-arrow {
   right: 20px; }
+
+#close-modal {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer; }
+  #close-modal:hover {
+    opacity: .6; }
 
 #navigator {
   position: absolute;
@@ -379,7 +401,10 @@ body {
   min-height: 900px; }
   #wedding .picture-wrapper {
     text-align: center; }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1366px) {
+    #wedding {
+      min-height: 700px; } }
+  @media screen and (max-width: 1024px) {
     #wedding {
       min-height: 562px; } }
 
@@ -424,8 +449,10 @@ body {
   #bridal-party > div {
     flex: 1;
     -webkit-flex: 1;
-    width: 50%;
     padding: 20px 0 50px 0; }
+  @media screen and (max-width: 1024px) {
+    #bridal-party {
+      display: block; } }
 
 #bridesmaids {
   background-color: rgba(114, 130, 167, 0.9); }
@@ -468,14 +495,45 @@ body {
     background-color: #fff;
     margin: 10px;
     background-size: cover;
-    border: 2px solid #fff; }
+    border: 2px solid #fff;
+    top: 200px;
+    background-color: #9e9e9e; }
     @media screen and (max-width: 1024px) {
       .bridal-party-profile-list > li {
         width: 125px;
         height: 125px; } }
+    .bridal-party-profile-list > li.selected {
+      position: absolute; }
     .bridal-party-profile-list > li:hover {
       cursor: pointer;
       opacity: .8; }
+
+#bridal-party-description {
+  display: none; }
+
+.bridal-party-wrapper {
+  font-size: 16px;
+  position: relative; }
+  .bridal-party-wrapper.selected {
+    padding: 215px 0 0 0; }
+    @media screen and (max-width: 1024px) {
+      .bridal-party-wrapper.selected {
+        padding: 135px 0 0 0; } }
+
+.bridal-bio {
+  text-align: justify;
+  display: none;
+  padding: 15px;
+  color: #fff;
+  width: 80%;
+  background: #fff;
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, #9E9E9E, #BDBDBD);
+  border-image-slice: 1;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  background-color: rgba(158, 158, 158, 0.8);
+  margin: 10px auto; }
 
 #directions {
   background-color: rgba(255, 255, 255, 0.8);
@@ -555,6 +613,7 @@ footer {
   font-style: italic;
   font-size: 12px; }
   footer a {
+    display: block;
     color: #666; }
 
 /*# sourceMappingURL=wedding.css.map */
