--- a/styles/css/wedding.scss
+++ b/styles/css/wedding.scss
@@ -30,15 +30,18 @@ h2{
     }
 }
 h3{
-	font-size: 26px;
-    font-weight: 600;
-    margin: 22px;
-    letter-spacing: 4px;
-    font-family: sverigedecorated;
+	font-size: 100px;
+    margin: -15px;
+    text-align: center;
+    font-family: mademoisellecamille;
 }
 h4{
-    font-size: 20px;
-    margin: 4px;
+   font-size: 16px;
+    margin: 8px;
+    font-weight: 600;
+    color: #212121;
+    text-transform: uppercase;
+    font-style: normal;
 }
 a{
 	text-decoration: none;
@@ -123,6 +126,15 @@ body{
     min-height: 600px;
     img{
         height:100%;
+         @media screen and (max-width:$standard_res){
+            max-height:420px;
+        }
+    }
+    @media screen and (max-width:$standard_res){
+        width:90%;
+        height:auto;
+        top:20%;
+        min-height:0;
     }
 }
 .nav-arrow{
@@ -141,6 +153,17 @@ body{
 }
 #right-arrow{
     right:20px;
+}
+#close-modal{
+    position:absolute;
+    top:5px;
+    right:5px;
+    color:#fff;
+    font-size:20px;
+    cursor:pointer;
+    &:hover{
+        opacity:.6;
+    }
 }
 #navigator{
     position:absolute;
@@ -413,7 +436,10 @@ body{
     background-image:url('../images/wedding.jpg');
     background-size: cover;
     min-height:900px;
-    @media screen and (max-width:$tablet){
+    @media screen and (max-width:$standard_res){
+        min-height:700px;
+    }
+    @media screen and (max-width:$tablet_horizontal){
         min-height:562px;
     }
 }
@@ -461,8 +487,10 @@ body{
     >div{
         flex:1;
         -webkit-flex:1;
-        width:50%;
         padding: 20px 0 50px 0;
+    }
+   @media screen and (max-width:$tablet_horizontal){
+        display:block;
     }
 }
 #bridesmaids{
@@ -507,15 +535,48 @@ body{
         margin:10px;
         background-size:cover;
         border: 2px solid #fff;
+        top:200px;
+        background-color:#9e9e9e;
         @media screen and (max-width:$tablet_horizontal){
             width: 125px;
             height: 125px;
+        }
+        &.selected{
+            position:absolute;
         }
         &:hover{
             cursor: pointer;
             opacity:.8;
         }
     }
+}
+#bridal-party-description{
+    display:none;
+}
+.bridal-party-wrapper{
+    font-size:16px;
+    position:relative;
+    &.selected{
+        padding:215px 0 0 0;
+        @media screen and (max-width:$tablet_horizontal){
+            padding:135px 0 0 0;
+        }
+    }
+}
+.bridal-bio{
+    text-align:justify;
+    display:none;
+    padding:15px;
+    color:#fff;
+    width:80%;
+    background:#fff;
+    border-width: 2px;
+    border-style: solid;
+    border-image: linear-gradient(to bottom, #9E9E9E, #BDBDBD);
+    border-image-slice: 1;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+    background-color: rgba(158, 158, 158, 0.8);
+    margin:10px auto;
 }
 #directions{
     background-color: rgba(255, 255, 255, .8);
@@ -610,6 +671,7 @@ footer{
     font-style: italic;
     font-size: 12px;
     a{
+        display:block;
         color:#666;
     }
 }
