--- a/app/styles/css/wedding.css
+++ b/app/styles/css/wedding.css
@@ -26,6 +26,7 @@ h3 {
   font-size: 100px;
   margin: -15px;
   text-align: center;
+  text-shadow: 1px 1px #000;
   font-family: mademoisellecamille; }
 
 h4 {
@@ -67,11 +68,9 @@ p {
 @font-face {
   font-family: mademoisellecamille;
   src: url("../fonts/Mademoiselle Camille L.ttf"); }
-
 @font-face {
   font-family: sverigedecorated;
   src: url("../fonts/SverigeScriptDecorated_Demo.ttf"); }
-
 .align-center {
   text-align: center; }
 
@@ -485,6 +484,9 @@ body {
 #katie {
   background-image: url("../images/bridesmaids/katie.png"); }
 
+#nuri {
+  background-image: url("../images/bridesmaids/nuri.png"); }
+
 #winston {
   background-image: url("../images/groomsmen/winston.png"); }
 
@@ -628,6 +630,47 @@ body {
   transition: background-color 1s;
   text-align: center; }
 
+#other-events {
+  background: url("../images/other_events_background_left.png") top left repeat-y, url("../images/other_events_background_right.png") top right repeat-y;
+  background-color: rgba(245, 245, 245, 0.7);
+  background-repeat: repeat-y;
+  min-height: 600px;
+  padding: 60px 0; }
+
+#other-events-container {
+  margin: 0 auto;
+  position: static;
+  padding: 15px;
+  width: 800px;
+  color: #fff;
+  z-index: 2;
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, #BDBDBD, #9E9E9E);
+  border-image-slice: 1;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  background-color: rgba(124, 139, 172, 0.7);
+  transition: background-color 1s;
+  text-align: center; }
+  #other-events-container .event {
+    margin: 0 0 20px 0; }
+    #other-events-container .event h4 {
+      color: #fff; }
+    #other-events-container .event p {
+      margin: 0 auto;
+      width: 75%; }
+    #other-events-container .event:after {
+      content: "";
+      display: block;
+      text-align: center;
+      width: 100%;
+      height: 98px;
+      background-size: 100% 100%;
+      background-image: url(../images/other_events_divider.png); }
+      @media screen and (max-width: 468px) {
+        #other-events-container .event:after {
+          height: 75px; } }
+
 #registry-text-container {
   top: 100px;
   width: 600px;
@@ -652,3 +695,5 @@ footer {
   footer a {
     display: block;
     color: #666; }
+
+/*# sourceMappingURL=wedding.css.map */
