--- a/app/styles/css/wedding.scss
+++ b/app/styles/css/wedding.scss
@@ -30,6 +30,7 @@ h3{
 	font-size: 100px;
     margin: -15px;
     text-align: center;
+    text-shadow: 1px 1px #000;
     font-family: mademoisellecamille;
 }
 h4{
@@ -521,6 +522,9 @@ body{
 #katie{
     background-image:url('../images/bridesmaids/katie.png');
 }
+#nuri{
+    background-image:url('../images/bridesmaids/nuri.png');
+}
 #winston{
     background-image:url('../images/groomsmen/winston.png');
 }
@@ -682,6 +686,51 @@ body{
     background-color: rgba(158, 158, 158, 0.88);
     transition: background-color 1s;
     text-align:center;
+}
+#other-events{
+    background:url("../images/other_events_background_left.png") top left repeat-y, url("../images/other_events_background_right.png") top right repeat-y;
+    background-color: rgba(245, 245, 245, 0.7);
+    background-repeat: repeat-y;
+    min-height:600px;
+    padding:60px 0;
+}
+#other-events-container{
+    margin:0 auto;
+    position:static;
+    padding:15px;
+    width:800px;
+    color:#fff;
+    z-index: 2;
+    border-width: 2px;
+    border-style: solid;
+    border-image: linear-gradient(to bottom, #BDBDBD, #9E9E9E);
+    border-image-slice: 1;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+    background-color: rgba(124, 139, 172, .7);
+    transition: background-color 1s;
+    text-align:center;
+    .event{
+        h4{
+            color:#fff;
+        }
+        margin:0 0 20px 0;
+        p{
+            margin:0 auto;
+            width:75%;
+        }
+        &:after{
+            content: "";
+            display: block;
+            text-align: center;
+            width: 100%;
+            height: 98px;
+            background-size: 100% 100%;
+            background-image: url(../images/other_events_divider.png);
+            @media screen and (max-width:468px){
+                height:75px;
+            }
+        }
+    }
 }
 #registry-text-container{
    top: 100px;
