--- a/app/styles/css/wedding.scss
+++ b/app/styles/css/wedding.scss
@@ -103,15 +103,16 @@ p{
 .italic{
 	font-weight: italic;
 }
-button{
-   margin: 20px 0;
-    padding: 15px 25px;
+button, input[type="submit"]{
+    margin: 20px 0;
+    padding: 10px 20px;
     border: 0;
-    font-size: 20px;
-    background: linear-gradient(to bottom, rgb(148, 148, 148) , rgb(117, 117, 117));
+    font-size: 18px;
+    font-family: aleo;
+    background: linear-gradient(to bottom, #BDBDBD, #757575);
     color: #fff;
     border: 1px solid #9e9e9e;
-    border-radius: 8px;
+    border-radius: 5px;
     &:hover{
         background: linear-gradient(to bottom, rgba(148, 148, 148,.8), rgba(117, 117, 117, .8));
         cursor:pointer;
@@ -455,19 +456,31 @@ body{
     margin: 15px 0;
 }
 #rsvp-text-content{
-    font-size:22px;
+    font-size:18px;
     display: flex;
-    text-align:left;
+    text-align:center;
     > form > * {
         margin: 8px 0;
     }
-    input[type="text"]{
+    .rsvp-input{
         width: 100%;
-        border-radius: 10px;
+        border-radius: 5px;
         padding: 10px 5px;
         border: 2px solid #c2c4c9;
         background-color: #fff;
         color: black;
+        &:focus{
+            outline: none;
+            box-shadow: 0px 0px 2px #7282a7;
+            border-radius: 5px;
+        }
+        &::placeholder{
+            font-family:aleo;
+            font-size:16px;
+        }
+    }
+    .rsvp-radio-button-wrapper{
+        font-size:12px;
     }
 }
 #rsvp-response-form, #rsvp-mad-lib-form{
@@ -479,6 +492,22 @@ body{
 }
 .rsvp-guest-list-names{
     margin:10px 0;
+}
+#rsvp-mad-lib{
+    text-align: justify;
+    font-size:14px;
+    .rsvp-mad-lib-input{
+        border: 0;
+        border-bottom: 1px solid black;
+        text-align: center;
+        &:focus{
+            outline: none;
+        }
+        &::placeholder{
+            font-family:aleo;
+            font-size:14px;
+        }
+    }
 }
 #engagement-text-container{
     width: 600px;
