--- a/app/styles/css/wedding.css
+++ b/app/styles/css/wedding.css
@@ -430,7 +430,8 @@ body {
       width: 85%; } }
   @media screen and (max-width: 768px) {
     #rsvp-form-wrapper {
-      width: 100%; } }
+      width: 100%;
+      min-width: 0; } }
 
 #rsvp-content {
   margin: 13px;
